--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "externals/nvapi-open-source-sdk"]
-	path = externals/nvapi-open-source-sdk
-	url = https://github.com/LizardByte/nvapi-open-source-sdk
-	branch = sdk
+[submodule "externals/nvapi-wrapper"]
+	path = externals/nvapi-wrapper
+	url = https://github.com/FrogTheFrog/nvapi-wrapper
